[package]
name = "tokio-postgres-rustls2"
description = "Rustls integration for tokio-postgres"
version = "0.13.0-rc.1"
authors = [
    "Jasper Hugo <jasper@jasperhugo.com>",
    "Aumetra Weisman <aumetra@cryptolab.net>",
]
repository = "https://github.com/aumetra/tokio-postgres-rustls2"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
const-oid = { version = "0.9.6", features = ["db"] }
ring = { version = "0.17", default-features = false }
rustls = { version = "0.23", default-features = false }
tokio = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, features = ["std"] }

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tokio-postgres = { version = "0.7", default-features = false, features = [
    "runtime",
] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "logging",
    "tls12",
    "ring",
] }
